<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TapFragment">

    <Button
        android:id="@+id/shopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_shop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tapCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tapButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/tap_button"
        app:layout_constraintBottom_toTopOf="@+id/shopButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapPowerText" />

    <TextView
        android:id="@+id/prestigeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prestige_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapCounter"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/tapPowerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_power_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapCounter" />

    <TextView
        android:id="@+id/idlePowerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idle_power_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapCounter"
        android:layout_marginEnd="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>